# routes/api.php
@@ -5,6 +5,7 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\EstadoController;
 use App\Http\Controllers\MunicipioController;
 use App\Http\Controllers\ParroquiaController;
+use App\Http\Controllers\ComunidadController;
 
 
 Route::get('/user', function (Request $request) {
@@ -13,3 +14,4 @@ Route::get('/user', function (Request $request) {
 Route::apiResource('estados', EstadoController::class);
 Route::apiResource('municipios', MunicipioController::class);
 Route::apiResource('parroquias', ParroquiaController::class);
+Route::apiResource('comunidades', ComunidadController::class);
